{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "2e90907d-17e9-4094-b36e-bfbb9cd76edc",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "568f0c60-5314-4240-aa69-114b612045b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e65a6437-c1f9-49f8-8056-e8e0425baa2b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}