{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "2e90907d-17e9-4094-b36e-bfbb9cd76edc",
            "actions": [
                {
                    "name": "PrimaryTouchContact",
                    "type": "PassThrough",
                    "id": "568f0c60-5314-4240-aa69-114b612045b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "PassThrough",
                    "id": "cdbba282-3a12-4301-868d-18459cb2ebcf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d52ed9a0-a6ab-4f77-8fd7-fd1430d6754d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7e5892c-74ea-4379-bb65-5baf7fb965c0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}